--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -35,7 +35,12 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>5.2.6.Final</version>
+			<version>5.3.6.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.3.6.Final</version>
 		</dependency>
 
 		<dependency>
