--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"C:\\Users\\Marcos\\.m2\\repository\\javax\\ws\\rs\\javax.ws.rs-api\\2.1-m09\\javax.ws.rs-api-2.1-m09.jar","type":"JAR","hints":{}},"javax.ws.rs:javax.ws.rs-api:2.1.0"],[{"location":"D:\\Dev\\cursos\\devmedia\\ws-jersey-e-hibernate\\webservice","type":"PROJECT","hints":{"PROJECT_NAME":"webservice"}},"br.com.geekcode:webservice:0.0.1"]]
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_171","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
