--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -29,6 +29,7 @@
 
 	<properties>
 		<jersey.version>2.26-b08</jersey.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
 	<dependencies>
